--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
         <button class="btn" id="print-player-list-button" style="margin-top: 10px">Print Player List</button>
         <button class="btn" id="print-resource-usage-button" style="margin-top: 10px">Print Resource Usage</button>
         <button class="btn btn-danger" id="stop-server-button" style="margin-top: 10px">Stop Server</button>
-        <!-- <button class="btn" id="trigger-manual-version-update-button" style="margin-top: 10px">Trigger Manual Version Update</button> -->
+        <button class="btn" id="trigger-manual-version-update-button" style="margin-top: 10px">Trigger Manual Version Update</button>
         <button class="btn" id="trigger-manual-backup-button" style="margin-top: 10px">Trigger Manual Backup</button>
         <button class="btn dropdown-toggle" id="toggle-restore-backup-controls-button" type="button" data-toggle="collapse" data-target="#restore-backup-controls" aria-expanded="false" aria-controls="restore-backup-controls" style="margin-top: 10px">
           Restore Backup
