--- a/static/index.html
+++ b/static/index.html
@@ -46,11 +46,21 @@
           <pre><code id="server-terminal-output">Error: No Terminal Output Found</code></pre>
         </div>
       </div>
-
+      <div id="command-content">
+        <div>
+          <label for="command-box">Enter Command: </label>
+          <input id="command-box" name="command">
+          <button class="btn" id="command-button">Send</button>
+        </div>
+        <div>
+          <button class="btn" id="test-button" style="margin-top: 10px; margin-left: 10px">Test Code</button>          
+        </div>
+      </div>
       <div>
         <button class="btn" id="print-player-list-button" style="margin-top: 10px">Print Player List</button>
         <button class="btn" id="print-resource-usage-button" style="margin-top: 10px">Print Resource Usage</button>
-        <button class="btn btn-danger" id="stop-server-button" style="margin-top: 10px">Stop Server</button>
+        <button class="btn" id="stop-server-button" style="margin-top: 10px; margin-left: 10px">Stop Server</button>
+        <button class="btn btn-danger" id="shutdown-button" style="margin-top: 10px">Shut Down Server</button>
         <button class="btn" id="trigger-manual-backup-button" style="margin-top: 10px">Trigger Manual Backup</button>
         <button class="btn dropdown-toggle" id="toggle-restore-backup-controls-button" type="button" data-toggle="collapse" data-target="#restore-backup-controls" aria-expanded="false" aria-controls="restore-backup-controls" style="margin-top: 10px">
           Restore Backup
